WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50266
m_hasNonEnumerableProperties is never initialized in Structure
https://bugs.webkit.org/show_bug.cgi?id=50266
Summary
m_hasNonEnumerableProperties is never initialized in Structure
Xan Lopez
Reported
2010-11-30 13:24:56 PST
Causes warnings in valgrind.
Attachments
structureinit.diff
(1.82 KB, patch)
2010-11-30 13:28 PST
,
Xan Lopez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2010-11-30 13:28:58 PST
Created
attachment 75189
[details]
structureinit.diff
Xan Lopez
Comment 2
2010-11-30 13:56:23 PST
Comment on
attachment 75189
[details]
structureinit.diff Landed as
r72961
.
Xan Lopez
Comment 3
2010-11-30 13:56:34 PST
Closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug