2010-11-30  Xan Lopez  <xlopez@igalia.com>

Reviewed by Darin Adler.

        m_hasNonEnumerableProperties is never initialized in Structure
        https://bugs.webkit.org/show_bug.cgi?id=50266

        * runtime/Structure.cpp:
        (JSC::Structure::Structure): initialize member variable.

Canonical link: https://commits.webkit.org/63416@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72961 268f45cc-cd09-0410-ab3c-d52691b4dbfc